frontend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: whiteboard-frontend
  namespace: whiteboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whiteboard-frontend
  template:
    metadata:
      labels:
        app: whiteboard-frontend
    spec:
      containers:
        - name: whiteboard-frontend
          image: rishin9847/whiteboard-frontend:v1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: whiteboard
spec:
  type: NodePort
  selector:
    app: whiteboard-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
