service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-k8s-app-service
spec:
  selector:
    app: node-k8s-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
